Fix header text overflow bug

--- a/styles.css
+++ b/styles.css
@@ -101,12 +101,15 @@ label {
 
 #header {
     background-color: var(--secondary_color);
-    height: 10vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
 }
 
 #library_text {
     padding: 30px;
     font-size: 2.5rem;
+    flex: 1;
 }
 
 #main {
